2009-09-15  Francois Suter  <francois@typo3.org>

	* Feature #11555: Integrated extension "gabriel" into TYPO3 Core as sysext "scheduler"

2009-09-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #11915: htmlArea RTE: superfluous span tags in content after server-based cleaning on paste operation

2009-09-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #11847: htmlArea RTE displays empty editing area in Opera 10
	* Fixed bug #11946: htmlArea RTE: table properties editing dialogue windows loose focus after opening in IE8

2009-09-13  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #11943: TCEforms suggest classes lack final ?> and use round brackets around the uid
	* Fixed bug #11945: TS objectbrowser converts labels to uppercase improperly (thanks to Christopher Stelmaszyk)
	* Fixed bug #11789: Extension Manager is not translatable - part 2 (thanks to Christopher Stelmaszyk)

2009-09-12  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to feature #10853: Added camel case for default media params
	* Follow-up to feature #6872: #11924: Use suggest feature in core

2009-09-12  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11920: Follow-up to feature #6872: TCEforms suggest gives no results with custom TSconfig (thanks to Andreas Wolf)

2009-09-11  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11925: Follow-up to feature #6872: TCEforms suggest fails with PHP fatal error (thanks to Steffen Gebert)

2009-09-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11895: Cookie detection in new t3skin login screen fails for certain cirumstances (thanks to Steffen Gebert)
	* renamed t3lib_PageRenderer and the templates for backend/frontend
	* Fixed bug #11908: Wrong labels in Media section in constants of css_styled_content

2009-09-07  Francois Suter  <francois@typo3.org>

	* Fixed bug #10201: Changed cHashes to use full md5 values to reduce the probability of duplicate hashes (thanks to Dan Osipov)

2009-09-07  Tobias Liebig  <mail_typo3@etobi.de>
